fixed the background image not showing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,7 @@
 
 .backdrop {
   background-color: black;
-  background-image: url('/images/stars.svg');
+  background-image: url('/bhm/images/stars.svg');
   background-repeat: repeat;
   background-size: 70% auto;
 }
